--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
 
 
 
-<link rel="stylesheet" href="css/sytle.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+  
+  <header class="header">
+    <a href="#" class="logo">Portfolio</a>
+<nav class="navbar">
+   <a href="#home" class="active">Home</a>
+   <a href="#about">About</a>
+   <a href="#services">Services</a>
+   <a href="#portfolio">Portfolio</a>
+   <a href="#contact">Contact</a>
+
+
+</nav>
+
+  </header>
+
 </body>
