--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio Website</title>
 
-
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <link rel="stylesheet" href="style.css">
 </head>
@@ -16,6 +17,7 @@
   
   <header class="header">
     <a href="#" class="logo">Portfolio</a>
+    <i class='bx bx-menu-alt-left' id="menu-icon"></i>
 <nav class="navbar">
    <a href="#home" class="active">Home</a>
    <a href="#about">About</a>
@@ -27,5 +29,122 @@
 </nav>
 
   </header>
+<Section class="home" id="home">
+  <div class="home-content">
+     <h3>Hello All, My name is</h3>
+     <h1>Michael Bean</h1>
+     <h3>and I'm a <span>Pricing Analyst</span> </h3>
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+      Nihil repudiandae quia 
+      voluptates nisi deserunt</p>
+  <div class="social-media">
+    <a href="#"><i class='bx bxl-github' ></i></a>
+    <a href="#"><i class='bx bxl-linkedin' ></i></a>
+    <a href="#"><i class='bx bxl-meta' ></i></a>
+    <a href="#"><i class='bx bxl-twitter' ></i></a>
+    <a href="#"><i class='bx bxl-medium' ></i></a>
+  </div>
+  <a href="#" class="btn">Download CV</a>
+</div>
 
+<div class="home-img">
+  <img src="images/me2.jpg" alt="">
+</div>
+
+</Section>
+
+<section class="about" id="about">
+  <div class="about-img">
+    <img src="images/about.jpg" alt="">
+
+  </div>
+
+  <div class="about-content">
+    <h2 class="heading">About <span>Me</span></h2>
+    <h3>Pricing Analyst</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nulla tenetur, est voluptatum molestiae dolorem explicabo officia vero adipisci ipsam commodi necessitatibus distinctio unde iste maxime rerum sequi repellat animi corrupti doloribus labore minima modi. Eius vero ad laborum iure voluptates deleniti numquam officiis harum esse.</p>
+    <a href="#" class="btn">Read More</a>
+  </div>
+</section>
+<section class="services" id="services">
+  <h2 class="heading">My <span>Services</span></h2>
+  <div class="services-container">
+    <div class="services-box">
+      <i class='bx bx-code-alt' ></i>
+      <h3>Web Development</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+  
+    <div class="services-box">
+      <i class='bx bx-data' ></i>
+      <h3>Data Analysis</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+
+    <div class="services-box">
+      <i class='bx bxl-microsoft' ></i>
+      <h3>Azure Development</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+
+    <div class="services-box">
+      <i class='bx bxl-aws' ></i>
+      <h3>AWS Development</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+     <a href="#" class="btn">Read More</a>
+    </div>
+
+
+</div>  
+</section>
+<section class="portfolio" id="portfolio">
+  <h2 class="heading">Latest <span>Projects</span></h2>
+
+  <div class="portfolio-container">
+    <div class="portfolio-box">
+      <img src="images/portfolio1.jpg" alt="">
+      <div class="portfolio-layer">
+        <h4>Data Analysis</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+        <a href="#"><i class='bx bx-link-external' ></i></a>
+      </div>
+    </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio2.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Data Project</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio3.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Azure Project</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio4.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>AWS Project</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<script src="script.js"></script>
 </body>
+</head>
+</html>
