--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
      <h3>Hello All, My name is</h3>
      <h1>Michael Bean</h1>
      <h3>and I'm a <span>Pricing Analyst</span> </h3>
-     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-      Nihil repudiandae quia 
-      voluptates nisi deserunt</p>
+     <p>Welcome to my portfolio website! I am passionate about exploring the world of data, data science, and data engineering. My curiosity for learning and applying new technologies in this field has led me to work extensively with Azure and AWS. As a result, I have gained a deep understanding of the various tools and services offered by these platforms. I constantly strive to expand my knowledge and skills, and I am always excited to take on new challenges. Through this website, I hope to showcase my experience, skills, and projects related to data science and engineering.</p>
   <div class="social-media">
     <a href="#"><i class='bx bxl-github' ></i></a>
     <a href="#"><i class='bx bxl-linkedin' ></i></a>
@@ -62,7 +60,13 @@
   <div class="about-content">
     <h2 class="heading">About <span>Me</span></h2>
     <h3>Pricing Analyst</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nulla tenetur, est voluptatum molestiae dolorem explicabo officia vero adipisci ipsam commodi necessitatibus distinctio unde iste maxime rerum sequi repellat animi corrupti doloribus labore minima modi. Eius vero ad laborum iure voluptates deleniti numquam officiis harum esse.</p>
+    <p>Hello, I'm glad you stopped by to learn more about me. My name is Michael Bean, and I'm a 44-year-old parent of two wonderful children, a daughter, and a son. Outside of being a parent, I have a deep passion for reading and learning. I find joy in exploring new topics, gaining knowledge, and broadening my horizons.</p>
+
+    <p>One of my favorite hobbies is programming. I enjoy the thrill of solving complex problems and creating something useful out of code. The satisfaction of seeing my code come to life and working as intended is what drives me to keep learning and growing as a programmer.</p>
+      
+    <p>My experience in programming has allowed me to dive into various fields such as data analysis, science and engineering, web development, and various other intrest. I am continuously exploring new programming languages and tools to keep up with the ever-changing landscape of technology.</p>
+      
+    <p>Overall, I'm a curious person who loves to learn and take on new challenges. Thank you for taking the time to get to know me better.</p>
     <a href="#" class="btn">Read More</a>
   </div>
 </section>
@@ -72,28 +76,28 @@
     <div class="services-box">
       <i class='bx bx-code-alt' ></i>
       <h3>Web Development</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <p></p>
       <a href="#" class="btn">Read More</a>
     </div>
   
     <div class="services-box">
       <i class='bx bx-data' ></i>
       <h3>Data Analysis</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <p></p>
       <a href="#" class="btn">Read More</a>
     </div>
 
     <div class="services-box">
       <i class='bx bxl-microsoft' ></i>
-      <h3>Azure Development</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <h3>Azure</h3>
+      <p></p>
       <a href="#" class="btn">Read More</a>
     </div>
 
     <div class="services-box">
       <i class='bx bxl-aws' ></i>
-      <h3>AWS Development</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo obcaecati placeat vel eaque delectus numquam libero unde excepturi nulla? Harum labore hic porro vel delectus rem blanditiis minus beatae similique fugit distinctio sequi, vero non cumque aliquam maiores. Alias harum non, consequatur soluta et enim odit?</p>
+      <h3>AWS</h3>
+      <p></p>
      <a href="#" class="btn">Read More</a>
     </div>
 
@@ -108,7 +112,7 @@
       <img src="images/portfolio1.jpg" alt="">
       <div class="portfolio-layer">
         <h4>Data Analysis</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+        <p></p>
         <a href="#"><i class='bx bx-link-external' ></i></a>
       </div>
     </div>
@@ -117,7 +121,7 @@
         <img src="images/portfolio2.jpg" alt="">
         <div class="portfolio-layer">
           <h4>Data Project</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+          <p></p>
           <a href="#"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
@@ -126,7 +130,7 @@
         <img src="images/portfolio3.jpg" alt="">
         <div class="portfolio-layer">
           <h4>Azure Project</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+          <p></p>
           <a href="#"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
@@ -135,7 +139,7 @@
         <img src="images/portfolio4.jpg" alt="">
         <div class="portfolio-layer">
           <h4>AWS Project</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae delectus architecto facilis necessitatibus, quasi repellat eius accusamus pariatur repudiandae, cum a eaque. Minima iste pariatur facilis nam omnis distinctio porro accusamus facere delectus quod sit, a necessitatibus modi nulla fugiat laboriosam ut ullam, eum asperiores placeat.</p>
+          <p></p>
           <a href="#"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
@@ -143,7 +147,22 @@
   </div>
 
 </section>
+<!-- contact section -->
+<section class="contact" id="contact"></section>
+   <h2 class="heading">Contact <span>Me!</span></h2>
 
+   <form action="#">
+    <div class="input-box">
+      <input type="text" placeholder="Name">
+      <input type="email" placeholder="Email">
+    </div>
+    <div class="input-box">
+      <input type="number" placeholder="Mobile Number">
+      <input type="text" placeholder="Email Subject">
+    </div>
+    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+    <input type="submit" value="Send Message" class="btn">
+   </form>"
 <script src="script.js"></script>
 </body>
 </head>
