--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
 <Section class="home" id="home">
   <div class="home-content">
-     <h3>Hello All, My name is</h3>
+     <h3>Hello, My name is</h3>
      <h1>Michael Bean</h1>
      <h3>and I'm a <span>Pricing Analyst</span> </h3>
      <p>Welcome to my portfolio website! I am passionate about exploring the world of data, data science, and data engineering. My curiosity for learning and applying new technologies in this field has led me to work extensively with Azure and AWS. As a result, I have gained a deep understanding of the various tools and services offered by these platforms. I constantly strive to expand my knowledge and skills, and I am always excited to take on new challenges. Through this website, I hope to showcase my experience, skills, and projects related to data science and engineering.</p>
