--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="home-content">
      <h3>Hello, My name is</h3>
      <h1>Michael Bean</h1>
-     <h3>and I'm a <span>Pricing Analyst</span> </h3>
+     <h3>and I'm a <span class="multiple-text"></span> </h3>
      <p>Welcome to my portfolio website! I am passionate about exploring the world of data, data science, and data engineering. My curiosity for learning and applying new technologies in this field has led me to work extensively with Azure and AWS. As a result, I have gained a deep understanding of the various tools and services offered by these platforms. I constantly strive to expand my knowledge and skills, and I am always excited to take on new challenges. Through this website, I hope to showcase my experience, skills, and projects related to data science and engineering.</p>
   <div class="social-media">
     <a href="#"><i class='bx bxl-github' ></i></a>
@@ -148,7 +148,7 @@
 
 </section>
 <!-- contact section -->
-<section class="contact" id="contact"></section>
+<section class="contact" id="contact">
    <h2 class="heading">Contact <span>Me!</span></h2>
 
    <form action="#">
@@ -162,7 +162,22 @@
     </div>
     <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
     <input type="submit" value="Send Message" class="btn">
-   </form>"
+   </form>
+</section>
+<!-- footer design -->
+<footer class="footer">
+  <div class="footer-text">
+  <p>Created by <a href="#">Michael Bean</a> | All rights reserved | Copyright &copy;</p>
+</div>
+<div class="footer-icontop">
+    <a href="#home"><i class='bx bxs-chevrons-up'></i></a>
+  </div>
+</footer>
+<!--scroll reveal-->
+<script src="https://unpkg.com/scrollreveal"></script>
+
+<!--typed js-->
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="script.js"></script>
 </body>
 </head>
