--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -36,13 +36,15 @@
      <h3>and I'm a <span class="multiple-text"></span> </h3>
      <p>Welcome to my portfolio website! I am passionate about exploring the world of data, data science, and data engineering. My curiosity for learning and applying new technologies in this field has led me to work extensively with Azure and AWS. As a result, I have gained a deep understanding of the various tools and services offered by these platforms. I constantly strive to expand my knowledge and skills, and I am always excited to take on new challenges. Through this website, I hope to showcase my experience, skills, and projects related to data science and engineering.</p>
   <div class="social-media">
-    <a href="#"><i class='bx bxl-github' ></i></a>
-    <a href="#"><i class='bx bxl-linkedin' ></i></a>
-    <a href="#"><i class='bx bxl-meta' ></i></a>
-    <a href="#"><i class='bx bxl-twitter' ></i></a>
-    <a href="#"><i class='bx bxl-medium' ></i></a>
+    <a href="https://github.com/AnalystBean"><i class='bx bxl-github' ></i></a>
+    <a href="https://www.linkedin.com/in/michaelbean1/"><i class='bx bxl-linkedin' ></i></a>
+    <a href="https://www.facebook.com/Mikerosoftpro"><i class='bx bxl-meta' ></i></a>
+    <a href="https://twitter.com/analystbean"><i class='bx bxl-twitter' ></i></a>
+    <a href="https://medium.com/@bean.michael2528"><i class='bx bxl-medium' ></i></a>
   </div>
   <a href="#" class="btn">Download CV</a>
+
+  <P>This webpage has been viewed <a id="count"></a>times using AZURE functions!</P>
 </div>
 
 <div class="home-img">
