--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -62,7 +62,7 @@
   <div class="about-content">
     <h2 class="heading">About <span>Me</span></h2>
     <h3>Pricing Analyst</h3>
-    <p>Hello, I'm glad you stopped by to learn more about me. My name is Michael Bean, and I'm a 44-year-old parent of two wonderful children, a daughter, and a son. Outside of being a parent, I have a deep passion for reading and learning. I find joy in exploring new topics, gaining knowledge, and broadening my horizons.</p>
+    <p>Hello, I'm glad you stopped by to learn more about me. My name is Michael Bean, and I'm a 44-year-old husband and parent of two wonderful children, a daughter, and a son. Outside of being a parent, I have a deep passion for reading and learning. I find joy in exploring new topics, gaining knowledge, and broadening my horizons.</p>
 
     <p>One of my favorite hobbies is programming. I enjoy the thrill of solving complex problems and creating something useful out of code. The satisfaction of seeing my code come to life and working as intended is what drives me to keep learning and growing as a programmer.</p>
       
