--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -44,7 +44,7 @@
   </div>
   <a href="#" class="btn">Download CV</a>
 
-  <P>This webpage has been viewed <a id="count"></a> <span class="text-change"></span></P>
+  <P>This webpage has been viewed <a id="count"></a> <i><b><span class="text-change"></span></i></P>
 </div>
 
 <div class="home-img">
