--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -60,7 +60,7 @@
   </div>
 
   <div class="about-content">
-    <h2 class="heading">About <span>Me</span></h2>
+    <h2 class="heading">About <span>Me!</span></h2>
     <h3>Pricing Analyst</h3>
     <p>Hello, I'm glad you stopped by to learn more about me. My name is Michael Bean, and I'm a 44-year-old husband and parent of two wonderful children, a daughter, and a son. Outside of being a parent, I have a deep passion for reading and learning. I find joy in exploring new topics, gaining knowledge, and broadening my horizons.</p>
 
@@ -77,7 +77,7 @@
   <div class="services-container">
     <div class="services-box">
       <i class='bx bx-code-alt' ></i>
-      <h3>Web Development</h3>
+      <h3>Database Development</h3>
       <p></p>
       <a href="#" class="btn">Read More</a>
     </div>
@@ -91,7 +91,7 @@
 
     <div class="services-box">
       <i class='bx bxl-microsoft' ></i>
-      <h3>Azure</h3>
+      <h3>Machine Learning</h3>
       <p></p>
       <a href="#" class="btn">Read More</a>
     </div>
